--- a/styles/portfoloi.css
+++ b/styles/portfoloi.css
@@ -36,6 +36,9 @@
     font-size: 18px;
     color: #757575;
 }
+.text-center{
+    text-align: center;
+}
 .header{
     background-image: url('../images/developer.png'), url('../images/header_bg.png');
     background-repeat: no-repeat;
@@ -88,11 +91,15 @@
     max-width: 1140px;
     margin: 0 auto;
  }
+ main-section{
+margin-top: 150px;
+margin-bottom: 150px;
+ }
  .about{
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 150px;
+    
 
  }
  .about-items{
@@ -102,3 +109,31 @@
  .item-descriptoin{
     font-weight: 600;
  }
+ .skills-container{
+    display: flex;
+    gap: 24px;
+ }
+ .skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px color rgb(204, 8, 8);
+ }
+.resume-container{
+   display: flex;
+   gap: 24px;
+   .experience-description, .experience-sub-title{
+      color: #757575;
+}
+   
+   
+
+.experience-sub-title{
+   font-size: 20px;
+}
+.resume-download-cv{
+   margin-top: 50px;
+}
+
+
+
+
